--- a/pytest-{{cookiecutter.plugin_name}}/appveyor.yml
+++ b/pytest-{{cookiecutter.plugin_name}}/appveyor.yml
@@ -12,6 +12,9 @@ environment:
     - PYTHON: "C:\\Python35"
       TOX_ENV: "py35"
 
+    - PYTHON: "C:\\Python36"
+      TOX_ENV: "py36"
+
 
 init:
   - "%PYTHON%/python -V"
