generalize flake8 and show source

--- a/tox-{{cookiecutter.plugin_name}}/tox.ini
+++ b/tox-{{cookiecutter.plugin_name}}/tox.ini
@@ -2,6 +2,9 @@
 [tox]
 envlist = py27,py34,py35,py36,pypy,flake8
 
+[flake8]
+exclude = .tox,.cache
+
 [testenv]
 deps = pytest
 commands = pytest {posargs:tests}
@@ -9,4 +12,4 @@ commands = pytest {posargs:tests}
 [testenv:flake8]
 skip_install = true
 deps = flake8
-commands = flake8 tox_{{cookiecutter.module_name}}.py setup.py tests
+commands = flake8 --show-source
