--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,67 @@
 [tox]
-recreate = true
-skipsdist = true
-envlist = py27,py34,py35,py36,pypy
+envlist =
+    fix_lint
+    py27
+    py34
+    py35
+    py36
+    py37
+    py38
+    pypy
+    pypy3
+    docs
+minversion = 3.7
+skip_missing_interpreters = true
+skipsdist = True
 
 [testenv]
-deps = pytest
-       pytest-cookies
-       tox
+deps =
+    pathlib2
+    pytest >= 4
+    pytest-cookies >= 0.4.0, <1
+    tox >= 3.13.2
+passenv =
+    http_proxy
+    https_proxy
+    no_proxy
+    SSL_CERT_FILE
+    PYTEST_*
+    HOME
 commands = pytest {posargs:tests}
+description = run test suite under {basepython}
 
 [pytest]
 norecursedirs = "tox-{{cookiecutter.plugin_name}}"
+
+[testenv:fix_lint]
+description = format the code base to adhere to our styles, and complain about what we cannot do automatically
+passenv = PROGRAMDATA
+deps =
+    pre-commit >= 1.14.4, < 2
+skip_install = True
+commands = pre-commit run --all-files --show-diff-on-failure
+           python -c 'import pathlib; print("hint: run \{\} install to add checks as pre-commit hook".format(pathlib.Path(r"{envdir}") / "bin" / "pre-commit"))'
+
+[flake8]
+max-line-length = 99
+
+[isort]
+multi_line_output = 3
+include_trailing_comma = True
+force_grid_wrap = 0
+line_length = 99
+known_first_party = tests
+known_third_party = pathlib2,pluggy,pytest,setuptools,sphinx_rtd_theme,tox
+
+[testenv:docs]
+description = invoke mkdocs to build the HTML docs
+deps = mkdocs
+commands = mkdocs build -d {toxworkdir}/docs_out
+           python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
+
+[testenv:dev]
+description = create dev environment
+deps =
+    {[testenv]deps}
+    {[testenv:docs]deps}
+develop = true
