--- a/tox-{{cookiecutter.plugin_name}}/MANIFEST.in
+++ b/tox-{{cookiecutter.plugin_name}}/MANIFEST.in
@@ -1,5 +1,6 @@
-include LICENSE
-include README.rst
+# setuptools-scm by default adds all SCM tracked files, we prune the following maintenance related ones (sdist only)
+exclude .gitignore
 
-recursive-exclude * __pycache__
-recursive-exclude * *.py[co]
+exclude azure-pipelines.yml
+exclude readthedocs.yml
+exclude MANIFEST.in
