--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,9 +26,12 @@ repos:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
     -   id: debug-statements
-    -   id: flake8
-        additional_dependencies: ["flake8-bugbear == 19.3.0"]
         language_version: python3.7
+-   repo: https://gitlab.com/pycqa/flake8
+    rev: 3.9.0
+    hooks:
+    -   id: flake8
+        additional_dependencies: [flake8-bugbear==21.4.3]
 -   repo: https://github.com/asottile/pyupgrade
     rev: v2.31.0
     hooks:
