--- a/tox-{{cookiecutter.plugin_name}}/.pre-commit-config.yaml
+++ b/tox-{{cookiecutter.plugin_name}}/.pre-commit-config.yaml
@@ -25,8 +25,11 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: debug-statements
+-   repo: https://gitlab.com/pycqa/flake8
+    rev: 3.9.0
+    hooks:
     -   id: flake8
-        additional_dependencies: ["flake8-bugbear == 19.3.0"]
+        additional_dependencies: [flake8-bugbear==21.4.3]
 -   repo: https://github.com/asottile/pyupgrade
     rev: v1.19.0
     hooks:
