--- a/tox-{{cookiecutter.plugin_name}}/.pre-commit-config.yaml
+++ b/tox-{{cookiecutter.plugin_name}}/.pre-commit-config.yaml
@@ -1,21 +1,21 @@
 repos:
 -   repo: https://github.com/python/black
-    rev: 19.3b0
+    rev: 21.12b0
     hooks:
     -   id: black
         args: [--safe]
 -   repo: https://github.com/asottile/blacken-docs
-    rev: v1.1.0
+    rev: v1.12.0
     hooks:
     -   id: blacken-docs
-        additional_dependencies: [black==19.3b0]
+        additional_dependencies: [black==21.12b0]
 -   repo: https://github.com/asottile/seed-isort-config
-    rev: v1.9.1
+    rev: v2.2.0
     hooks:
     -   id: seed-isort-config
         args: [--application-directories, "src:."]
 -   repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.21
+    rev: v5.10.1
     hooks:
     -   id: isort
 -   repo: https://github.com/pre-commit/pre-commit-hooks
@@ -25,13 +25,16 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: debug-statements
+-   repo: https://gitlab.com/pycqa/flake8
+    rev: 3.9.0
+    hooks:
     -   id: flake8
-        additional_dependencies: ["flake8-bugbear == 19.3.0"]
+        additional_dependencies: [flake8-bugbear==21.4.3]
 -   repo: https://github.com/asottile/pyupgrade
-    rev: v1.19.0
+    rev: v2.31.0
     hooks:
     -   id: pyupgrade
 -   repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.4.0
+    rev: v1.9.0
     hooks:
     -   id: rst-backticks
